@@ -1,7 +1,8 @@
-#	$NetBSD: Makefile,v 1.464 2008/05/01 20:18:19 cegger Exp $
+#	$NetBSD: Makefile,v 1.465 2008/05/18 22:05:59 cegger Exp $
 #	@(#)Makefile	8.1 (Berkeley) 6/18/93
 
-MAN=	aac.4 ac97.4 acardide.4 aceride.4 acphy.4 adbbt.4 adbkbd.4 adbms.4 \
+MAN=	aac.4 ac97.4 acardide.4 aceride.4 acphy.4 acpidalb.4 \
+	adbbt.4 adbkbd.4 adbms.4 \
 	adc.4 adt7467c.4 adv.4 adw.4 agp.4 agr.4 ahb.4 ahc.4 ahcisata.4 ahd.4 \
 	aiboost.4 amdpm.4 amdtemp.4 amhphy.4 amr.4 aps.4 \
 	an.4 arcmsr.4 aria.4 artsata.4 ata.4 atalk.4 ataraid.4 \
